BusOne/src/objects/Plan_Formulary_JO__c.object
<CustomObject>
    <description>Junction object between plan Demographics and Plan Formulary Unique</description>
    <fields>
        <fullName>BOT_Account_Plan_Name__c</fullName>
        <label>Account Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Formulary JOs</relationshipLabel>
        <relationshipName>Plan_Formulary_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives__c</fullName>
        <label>Formulary Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Name__c</fullName>
        <label>Formulary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulary Product</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Plan Formulary JOs</relationshipLabel>
        <relationshipName>Formulary_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Demographics_ID__c</fullName>
        <description>To store the BOT plan demographics ID</description>
        <label>BOT_Plan_Demographics_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Demographics_Unique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Plan Demographics to uniquee</description>
        <label>Plan Demographics Unique</label>
        <referenceTo>Plan_Product__c</referenceTo>
        <relationshipLabel>Plan Formulary JOs</relationshipLabel>
        <relationshipName>Plan_Demographics_Unique</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Demographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Demographics</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Plan_Demographics</relationshipLabel>
        <relationshipName>Plan_Demographics_JO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type__c</fullName>
        <label>Product type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Total_Formulary_Lives__c</fullName>
        <description>To store the total formulary lives irrespective of Plan demographics</description>
        <label>Total Formulary Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formularies_Unique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formularies Unique</label>
        <referenceTo>BOT_Formularies_Unique__c</referenceTo>
        <relationshipLabel>Plan Formulary JOs</relationshipLabel>
        <relationshipName>Formularies_Unique</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan Formulary JO</label>
    <nameField>
        <label>BOT Formulary Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Formulary JOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>